--- a/main.html
+++ b/main.html
@@ -11,6 +11,17 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<p class="question">What is the capital of India?</p>
+	<label>
+		<input type="checkbox"> New Delhi
+		<br>
+		<input type="checkbox"> Mumbai
+	</label>
+
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi" class="block-quote">
+		New Delhi is the capital of India and an administrative district of NCT Delhi.
+	</blockquote>
+
 </body>
 
 </html>
